--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.useso.com/css?family=Open+Sans:400,700,600);
-@import url(http://fonts.useso.com/css?family=Oswald:400,700);
 * {
 	margin: 0;
 	padding: 0;
@@ -21,12 +19,12 @@ body {
 }
 ::selection {
 	color: #fff;
-	background: #005f8d;
+	background: #61b8b5;
 }
 
 ::-moz-selection {
  color: #fff;
- background: #005f8d;
+ background: #61b8b5;
 }
 p {
 	color: #858585;
@@ -70,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 	color: #BEBEBE;
 }
 .btn {
-	background: #005f8d;
+	background: #61b8b5;
 }
 .btn:hover {
 	background: #145AC4;
@@ -116,7 +114,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: rgba(255,255,255,0.35);
 }
 a {
-	color: #005f8d;
+	color: #61b8b5;
 	text-decoration: none;
 	text-shadow: none;
 	-webkit-transition: all 0.2s linear;
@@ -134,7 +132,7 @@ a:hover {
 	border-radius: 0px;
 }
 .btn-primary {
-	background: #005f8d;
+	background: #61b8b5;
 }
 .form-control {
 	border-radius: 0px;
@@ -159,7 +157,7 @@ a:hover {
 .topHome:hover {
 	color: #F89F9F;
 }
-/* Header 
+/* Header
 ----------------------------------------------*/
 #section-top {
 	background: #4E4E4E;
@@ -190,7 +188,7 @@ a:hover {
 	z-index: 50;
 	border-radius: 0;
 	top: 0px;
-	background: rgba(255, 255, 255, 0.70);
+	/*background: rgba(255, 255, 255, 0.70);*/
 }
 .addBg {
 	background: #00a1cb;
@@ -203,19 +201,19 @@ a:hover {
 	background: transparent;
 }
 .navbar-inverse .navbar-toggle {
-	background-color: #005f8d;
+	background-color: #61b8b5;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-/*background-color: #005f8d;*/
+/*background-color: #61b8b5;*/
 }
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-	background: #005f8d;
+	background: #61b8b5;
 }
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-	color: #00a1cb;
+	color: #fff;
 }
 .addBg .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
-	color: #005f8d;
+	color: #61b8b5;
 }
 .navbar-inverse .navbar-toggle:hover .icon-bar {
 	background: #fff;
@@ -229,7 +227,7 @@ a:hover {
 	color: #000;
 	width: 83%;
 	text-align: center;
-	margin: 40% auto 24px auto;
+	margin: 20% auto 24px auto;
 	font-family: 'Oswald', sans-serif;
 }
 .hero-text p {
@@ -241,7 +239,7 @@ a:hover {
 /*.carousel-inner*/
 #myCarousel {
 	margin-top: 50px;
-	border-bottom: 4px solid #005f8d;
+	border-bottom: 4px solid #61b8b5;
 }
 .carousel-inner > .item {
 }
@@ -268,7 +266,7 @@ a:hover {
 }
 .actionPanel {
 	padding: 25px 0;
-	background: #005f8d;
+	background: #61b8b5;
 }
 .actionPanel h3 {
 	margin: 0px;
@@ -278,7 +276,7 @@ a:hover {
 	height: 90px;
 	width: 90px;
 	border-radius: 95px;
-	color: #005f8d;
+	color: #61b8b5;
 	line-height: 90px !important;
 }
 #section-strapline {
@@ -291,10 +289,10 @@ a:hover {
 	float: left;
 	padding: 22px 15px;
 	line-height: 18px;
-	height: 50px;/*color:#005f8d;*/
+	height: 50px;/*color:#61b8b5;*/
 }
 .navbar-brand b {
-	color: #00a1cb;
+	color: #fff;
 	font-family: 'Oswald', sans-serif;
 	font-weight: 900;
 }
@@ -306,7 +304,7 @@ a:hover {
 	font-style: normal;
 }
 .logo {
-	font-size: 2.2em;
+	font-size: 2.5em;
 	text-shadow: none;
 	margin: 8px 0 0 0;
 }
@@ -333,7 +331,7 @@ a:hover {
 	color: #fff;
 }
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-	color: #005f8d;
+	color: #fff;
 	background: none;
 	border-radius: 0px;
 }
@@ -364,7 +362,7 @@ a:hover {
 	font-weight: 200;
 }
 .page-section h2 {
-	color: #005f8d;
+	color: #61b8b5;
 }
 .page-section p {
 	font-size: 1.1em;
@@ -374,7 +372,7 @@ a:hover {
 	background: #000;
 }
 .darkBg .fa {
-	color: #005f8d;
+	color: #61b8b5;
 }
 /*--- Banner ----*/
 .banner-container {
@@ -386,7 +384,7 @@ a:hover {
 	background-size: 100% 100%;
 	background-size: cover;
 	position: relative;
-	border-bottom: 2px #005f8d solid;
+	border-bottom: 2px #61b8b5 solid;
 }
 .banner-container > img {
 	width: 100%;
@@ -410,7 +408,8 @@ a:hover {
 	margin: 37px 0 13px;
 	text-transform: uppercase;
 	text-shadow: 0 1px 1px rgba(124, 124, 124, 1);
-	/*background: rgba(0, 161, 203, 0.53);*/
+	background: rgba(201, 201, 201, 0.3);
+	border-radius:50px;
 	display: inline-block;
 	/* float: left; */
 	margin: 0 auto;
@@ -443,7 +442,7 @@ a.arrow-link:hover {
 	color: #fff;
 }
 .colord {
-	background: #005f8d;
+	background: #61b8b5;
 }
 .colord p {
 	color: #DAE0FF;
@@ -530,7 +529,7 @@ a.arrow-link:hover {
 	margin: 3px;
 	cursor: pointer;
 	box-shadow: 1px 1px 1px rgba(0,0,0,0.1) inset, 1px 1px 1px rgba(255,255,255,0.1);
-	border: 2px solid #005f8d;
+	border: 2px solid #61b8b5;
 }
 img, video, iframe, embed, object {
 	max-width: 100%;
@@ -635,7 +634,7 @@ img, video, iframe, embed, object {
 	margin: 2px;
 }
 #contactUs {
-/*background: #005f8d;*/;
+/*background: #61b8b5;*/;
 }
 #contactUs .btn {
 	border-radius: 0px !important;
@@ -762,11 +761,11 @@ nav#filter li {
 nav#filter a {
 	padding: 4px 12px;
 	line-height: 20px;
-	border: 1px solid #005f8d;
+	border: 1px solid #61b8b5;
 	text-decoration: none;
 }
 .current {
-	background: #005f8d;
+	background: #61b8b5;
 	color: #fff;
 }
 .page-section.intro {
@@ -855,7 +854,7 @@ footer {
 .social a {
 	font-size: 32px;
 	margin: 0 10px;
-	color: #005f8d;
+	color: #61b8b5;
 	background: rgba(255, 255, 255, 0.44);
 	padding: 0px 10px;
 }
@@ -892,6 +891,12 @@ footer {
 	height: 110%;
 }
 
+@media (max-width: 768px) {
+	.header .navbar-brand {
+		padding: 10px 15px;
+	}
+}
+
 @media (min-width: 768px) {
 .header .navbar-brand {
 	padding-left: 0;
@@ -907,8 +912,15 @@ footer {
 }
 }
 
-@media (max-width: 768px) {
-.hero-text {
+@media (max-width: 995px) {
+	.logo {
+		font-size: 28px !important;
+	}
+	.navbar-inverse .navbar-nav > li > a {
+		font-size: 16px;
+		margin: 19px 7px;
+	}
+	.hero-text {
 	color: #000;
 	width: 83%;
 	text-align: center;
@@ -991,11 +1003,14 @@ a.arrow-link {
 }
 
 @media (max-width: 480px) {
+	.logo {
+		font-size: 19px !important;
+	}
 .banner-container {
 	background-size: contain;
 }
 .hero-text h1 {
-	font-size: 17px !important;
+	font-size: 16px !important;
 }
 .banner-container > img {
 	width: 100%;
@@ -1126,7 +1141,7 @@ nav#filter li {
 }
 .parlex-back {
 	padding: 30px 0;
-	background-color: rgba(0, 95, 141, 0.84);
+	background-color: #61b8b5;
 	color: #FDFDFD !important;
 }
 .parlex-back .heading p {
@@ -1179,7 +1194,7 @@ nav#filter li {
 	transform: scale(1.1);
 }
 .flat .plan.featured:hover li.plan-name, .flat .plan:hover li.plan-name, .flat .plan.featured.plan-name {
-	background: #005f8d !important;
+	background: #61b8b5 !important;
 }
 .customNavigation {
 	display: none;
