--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,10 @@ px      68    160    252    344    436    528    620    712    */
   nav .block .navbar-brand img {
     padding-left: 25px;
   }
+  
+  nav .block .navbar-default .navbar-nav > li > a {
+    margin: 0px 8px;
+  }
   /*--
     slider Start
 --*/
@@ -160,7 +164,7 @@ px      68    160    252    */
   }
   nav .block .navbar-brand img {
     padding-left: 10px;
-    padding-top: 4px;
+    padding-top: 15px;
   }
   nav .block .navbar-default {
     margin-top: 10px;
@@ -169,6 +173,13 @@ px      68    160    252    */
   nav .block .navbar-default .navbar-header {
     padding-bottom: 15px;
     margin-top: 0px;
+    width: 100%;
+  }
+  nav .block .navbar-default .navbar-container {
+    display: table-cell;
+  }
+  nav .block .navbar-default .navbar-header .navbar-brand {
+    width: 80%;
   }
   nav .block .navbar-default .navbar-header .navbar-toggle {
     margin-top: 15px;
