--- a/css/main.css
+++ b/css/main.css
@@ -341,7 +341,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 }
 #blog .block ul li h3 {
   color: #323232;
-  padding: 0px 40px 20px;
+  padding: 0px 0px 20px;
   line-height: 26px;
   position: relative;
 }
@@ -494,8 +494,8 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   padding: 28px 105px;
   border-radius: 0px;
   background: none;
-  color: #FF4F02;
-  border: 1px solid #FF4F02;
+  color: #576BAB;
+  border: 1px solid #576BAB;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 600;
@@ -576,6 +576,28 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #contact-us {
   padding: 70px 0px;
+  background: url("../images/subscribe-bg.jpg") #000000;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+
+}
+#contact-us .block .heading {
+  color: #fff;
+}
+
+#contact-us:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/overlay-pattern.png") #000000;
+  opacity: 0.3;
 }
 #contact-us .block .title {
   padding: 20px 0;
@@ -606,7 +628,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   border: 1px solid #7EC3BB;
 }
 #contact-us .block a {
-  background: #FF4F02;
+  background: #576BAB;
   float: right;
   color: #fff;
   font-weight: 600;
@@ -625,13 +647,42 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #footer {
   padding: 70px 0px;
+  background: url("../images/subscribe-bg.jpg") #000000;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+
+}
+#footer .block .heading {
+  color: #555;
+}
+#footer .block .heading:before {
+  background: #555;
+}
+
+#footer .block .col-md-4 {
+  padding-top: 40px;
+}
+
+#footer:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/overlay-pattern.png") white;
+  opacity: 0.3;
 }
 #footer .block h3 {
   color: #2E2E2E;
   padding-bottom: 25px;
 }
 #footer .block h3 span {
-  color: #FF4F02;
+  color: #576BAB;
 }
 #footer .block .blog ul,
 #footer .block .info ul,
@@ -650,7 +701,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #footer .block .gallary ul li h4 {
   padding-bottom: 10px;
   display: block;
-  color: #FF4F02;
+  color: #576BAB;
 }
 #footer .block .blog ul li h4 i,
 #footer .block .info ul li h4 i,
@@ -662,14 +713,14 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #footer .block .blog ul li h4 a,
 #footer .block .info ul li h4 a,
 #footer .block .gallary ul li h4 a {
-  color: #FF4F02;
+  color: #576BAB;
   font-size: 20px;
-  font-weight: 600;
+  /*font-weight: 600;*/
 }
 #footer .block .blog ul li p,
 #footer .block .info ul li p,
 #footer .block .gallary ul li p {
-  color: #474747;
+  color: #333;
   font-size: 14px;
 }
 #footer .block .social-media-link h3 {
@@ -678,7 +729,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   padding-top: 30px;
 }
 #footer .block .social-media-link h3 span {
-  color: #FF4F02;
+  color: #576BAB;
 }
 #footer .block .social-media-link ul li {
   display: inline-block;
@@ -699,7 +750,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   transition: .3s all;
 }
 #footer .block .social-media-link ul li a:hover {
-  background: #FF4F02;
+  background: #576BAB;
   color: #fff;
 }
 /*--
@@ -718,5 +769,5 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   letter-spacing: 2px;
 }
 #footer-bottom p a {
-  color: #FF4F02;
+  color: #576BAB;
 }
