--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ a:active {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 /*--
@@ -135,7 +135,7 @@ a:active {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
   opacity: 0;
 }
 /*--
@@ -318,7 +318,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #blog .block .heading {
@@ -513,7 +513,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #subscribe {
   padding: 100px 0px;
   text-align: center;
-  background: url("../images/subscribe-bg.jpg");
+  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -528,7 +528,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #subscribe .block h1.heading {
@@ -576,7 +576,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #contact-us {
   padding: 70px 0px;
-  background: url("../images/subscribe-bg.jpg") #000000;
+  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg") #000000;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -596,7 +596,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #contact-us .block .title {
@@ -647,7 +647,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #footer {
   padding: 70px 0px;
-  background: url("../images/subscribe-bg.jpg") #000000;
+  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg") #000000;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -674,7 +674,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/overlay-pattern.png") white;
+  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") white;
   opacity: 0.3;
 }
 #footer .block h3 {
