--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* var text-decoration */
 @font-face {
   font-family: myfont;
-  src: url(../fonts/ufonts.com_tw-cen-mt.ttf);
+  src: url(http://hz-jc.test.upcdn.net/fonts/ufonts.com_tw-cen-mt.ttf);
 }
 /*--
     Common Css
