--- a/css/main.css
+++ b/css/main.css
@@ -172,8 +172,8 @@ nav .block .navbar-default .navbar-header {
 }
 nav .block .navbar-default .navbar-brand {
   padding-left: 0px;
-  display: flex;
-  align-items: center;
+  padding-top: 10px;
+
 }
 nav .block .navbar-default .navbar-nav {
   padding-top: 10px;
