--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ a:active {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
+  background: url("../images/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 /*--
@@ -135,7 +135,7 @@ a:active {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
+  background: url("../images/overlay-pattern.png") #000000;
   opacity: 0;
 }
 /*--
@@ -307,7 +307,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #blog {
   padding-top: 75px;
   padding-bottom: 100px;
-  background: url("http://hz-jc.test.upcdn.net/blog-bg.jpg");
+  background: url("../images/blog/blog-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -322,7 +322,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
+  background: url("../images/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #blog .block .heading {
@@ -518,7 +518,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #subscribe {
   padding: 100px 0px;
   text-align: center;
-  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg");
+  background: url("../images/subscribe-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -533,7 +533,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
+  background: url("../images/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #subscribe .block h1.heading {
@@ -581,7 +581,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #contact-us {
   padding: 70px 0px;
-  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg") #000000;
+  background: url("../images/subscribe-bg.jpg") #000000;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -601,7 +601,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") #000000;
+  background: url("../images/overlay-pattern.png") #000000;
   opacity: 0.3;
 }
 #contact-us .block .title {
@@ -652,7 +652,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 --*/
 #footer {
   padding: 70px 0px;
-  background: url("http://hz-jc.test.upcdn.net/subscribe-bg.jpg") #000000;
+  background: url("../images/subscribe-bg.jpg") #000000;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -680,7 +680,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("http://hz-jc.test.upcdn.net/overlay-pattern.png") white;
+  background: url("../images/overlay-pattern.png") white;
   opacity: 0.3;
 }
 #footer .block h3 {
