--- a/css/main.css
+++ b/css/main.css
@@ -146,9 +146,9 @@ nav {
   width: 100%;
 }
 nav .block {
-  margin-top: -85px;
+  margin-top: -70px;
   background: #fff;
-  padding: 25px 40px;
+  padding: 10px 40px;
   background: rgba(255, 255, 255, 0.89);
 }
 nav .block .navbar-default {
@@ -172,8 +172,9 @@ nav .block .navbar-default .navbar-header {
 }
 nav .block .navbar-default .navbar-brand {
   padding-left: 0px;
-  padding-top: 10px;
-
+  /*padding-top: 10px;*/
+  display: flex;
+  align-items: center;
 }
 nav .block .navbar-default .navbar-nav {
   padding-top: 10px;
@@ -275,7 +276,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   right: 0;
   top: -40px;
   font-size: 40px;
-  color: #AA9D84;
+  color: #576BAB;
 }
 /*--
     about-us Start
@@ -292,6 +293,8 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   font-size: 16px;
   line-height: 30px;
   padding: 40px 10px;
+  display: flex;
+  align-items: center;
 }
 #about-us .block .content {
   display: flex;
