--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,7 +18,8 @@ px      68    160    252    344    436    528    620    712    */
   nav .block {
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   nav .block .navbar-brand img {
     padding-left: 25px;
@@ -165,11 +166,13 @@ px      68    160    252    */
   }
   nav .block .navbar-brand img {
     padding-left: 10px;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
+    display: flex;
+    align-items: center;
   }
   nav .block .navbar-default {
     margin-top: 10px;
-    padding: 3px 0;
+    padding: 5px 0;
   }
   nav .block .navbar-default .navbar-header {
     /*padding-bottom: 15px;*/
@@ -180,7 +183,7 @@ px      68    160    252    */
     display: table-cell;
   }
   nav .block .navbar-default .navbar-header .navbar-brand {
-    width: 80%;
+    width: 60%;
   }
   nav .block .navbar-default .navbar-header .navbar-toggle {
     margin-top: 15px;
