--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* var text-decoration */
 @font-face {
   font-family: myfont;
-  src: url(../fonts/ufonts.com_tw-cen-mt.ttf);
+  src: url(../fonts/NotoSerifJP-Regular.ttf);
 }
 /*--
     Common Css
@@ -514,141 +514,6 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #price .block .pricing-list .btn:hover {
   background: #576BAB;
   color: #fff;
-}
-/*--
-    subscribe Start
---*/
-#subscribe {
-  padding: 100px 0px;
-  text-align: center;
-  background: url("../images/subscribe-bg.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
-}
-#subscribe:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
-  opacity: 0.3;
-}
-#subscribe .block h1.heading {
-  color: #fff;
-}
-#subscribe .block p {
-  padding: 25px 0px;
-  color: #fff;
-  font-size: 18px;
-}
-#subscribe .block form .form-control {
-  width: 450px;
-  background: #fff;
-  opacity: 0.9;
-  border: none;
-  height: 65px;
-  border-radius: 0px;
-  font-size: 15px;
-}
-#subscribe .block form .input-group-addon {
-  padding: 0px;
-  border: none;
-  background: none;
-}
-#subscribe .block form .input-group-addon button {
-  width: 212px;
-  height: 65px;
-  border: none;
-  border-radius: 0px;
-  background: #7EC3BB;
-  color: #fff;
-  font-weight: 600;
-  font-size: 16px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-}
-#subscribe .block form .input-group-addon button:hover {
-  background: #69a8a1;
-}
-/*--
-    contact-us Start
---*/
-#contact-us {
-  padding: 70px 0px;
-  background: url("../images/subscribe-bg.jpg") #000000;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
-
-}
-#contact-us .block .heading {
-  color: #fff;
-}
-
-#contact-us:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: url("../images/overlay-pattern.png") #000000;
-  opacity: 0.3;
-}
-#contact-us .block .title {
-  padding: 20px 0;
-}
-#contact-us .block form {
-  padding-bottom: 20px;
-}
-#contact-us .block form input {
-  height: 48px;
-  border-radius: 0px;
-  box-shadow: none;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-}
-#contact-us .block form input:focus {
-  border: 1px solid #7EC3BB;
-}
-#contact-us .block form textarea {
-  height: 140px;
-  border-radius: 0px;
-  box-shadow: none;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
-}
-#contact-us .block form textarea:focus {
-  border: 1px solid #7EC3BB;
-}
-#contact-us .block a {
-  background: #576BAB;
-  float: right;
-  color: #fff;
-  font-weight: 600;
-  text-transform: uppercase;
-  border-radius: 0px;
-  border: 0px;
-  width: 512px;
-  height: 50px;
-  padding-top: 15px;
-  -webkit-transition: .3s all;
-  -o-transition: .3s all;
-  transition: .3s all;
 }
 /*--
     footer Start
